--- a/app/src/main/res/navigation/navigation_profile.xml
+++ b/app/src/main/res/navigation/navigation_profile.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/dashboardFragment"
-        android:name="com.example.nutrisense.DashboardFragment"
+        android:name="com.example.nutrisense.fragments.DashboardFragment"
         android:label="DashboardFragment"
         tools:layout="@layout/fragment_dashboard">
         <argument
@@ -35,7 +35,7 @@
 
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.nutrisense.ProfileFragment"
+        android:name="com.example.nutrisense.fragments.ProfileFragment"
         android:label="ProfileFragment"
         tools:layout="@layout/fragment_profile">
         <argument
@@ -54,7 +54,7 @@
 
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.nutrisense.SettingsFragment"
+        android:name="com.example.nutrisense.fragments.SettingsFragment"
         android:label="SettingsFragment"
         tools:layout="@layout/fragment_settings">
         <action
@@ -64,7 +64,7 @@
 
     <fragment
         android:id="@+id/calculateNutritionFragment"
-        android:name="com.example.nutrisense.CalculateNutritionFragment"
+        android:name="com.example.nutrisense.fragments.CalculateNutritionFragment"
         android:label="CalculateNutritionFragment"
         tools:layout="@layout/fragment_calculate_nutrition">
         <action
@@ -74,7 +74,7 @@
 
     <fragment
         android:id="@+id/searchHistoryFragment"
-        android:name="com.example.nutrisense.SearchHistoryFragment"
+        android:name="com.example.nutrisense.fragments.SearchHistoryFragment"
         android:label="SearchHistoryFragment"
         tools:layout="@layout/fragment_search_history">
         <action
@@ -84,7 +84,7 @@
 
     <fragment
         android:id="@+id/recipeSearchFragment"
-        android:name="com.example.nutrisense.RecipeSearchFragment"
+        android:name="com.example.nutrisense.fragments.RecipeSearchFragment"
         android:label="RecipeSearchFragment"
         tools:layout="@layout/fragment_recipe_search">
         <action
@@ -94,7 +94,7 @@
 
     <fragment
         android:id="@+id/recipeHistoryFragment"
-        android:name="com.example.nutrisense.RecipeHistoryFragment"
+        android:name="com.example.nutrisense.fragments.RecipeHistoryFragment"
         android:label="RecipeHistoryFragment"
         tools:layout="@layout/fragment_recipe_history">
         <action
